# ripleyflow-desktop

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/ffmpeg/: README.md
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: denoise.rs  mod.rs  preview.rs  settings.rs  video.rs
src-tauri/src/utils/: deep_filter.rs  ffmpeg.rs  mod.rs
src/components/: CircularProgress.tsx  ConverterTab.tsx  Denoiser.tsx  Footer.tsx  FormatSelector.tsx  Header.tsx  PreviewDisplay.tsx  PreviewSelector.tsx  PreviewTab.tsx  ProgressOverlay.tsx  SettingsDialog.tsx  TabContent.tsx  Tabs.tsx  VideoList.tsx  VideoPlayer.tsx  VideoSelector.tsx
src/hooks/: useAppState.ts  useConversion.ts  useSettings.ts  useVideoOperations.ts  useVideoSelection.ts
src/utils/: pathUtils.ts
